--- a/package.json
+++ b/package.json
@@ -3,13 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "ts-node server.ts",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production ts-node server.ts"
   },
   "dependencies": {
+    "@types/next": "^9.0.0",
+    "@types/node": "^13.5.0",
+    "@types/react": "^16.9.19",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.4.1",
+    "express": "^4.17.1",
     "next": "9.1.7",
+    "next-routes": "^1.4.2",
     "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-dom": "16.12.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
+  },
+  "devDependencies": {
+    "ts-node": "^8.6.2",
+    "typescript": "^3.7.5"
   }
 }
